--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "A react component to display a minecraft item",
   "scripts": {
+    "predeploy": "npm run production",
+    "deploy": "gh-pages -d public",
     "dev": "webpack-dev-server --progress --colors --inline --hot",
     "production": "webpack --progress -p"
   },
@@ -16,12 +18,13 @@
   "bugs": {
     "url": "https://github.com/heroslender/react-itemstack/issues"
   },
-  "homepage": "https://github.com/heroslender/react-itemstack#readme",
+  "homepage": "http://react-itemstack.heroslender.com/",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@types/gh-pages": "^2.0.0",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.0",
@@ -30,6 +33,8 @@
     "@types/webpack-dev-server": "^3.1.6",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
